remove paginator except for events page, half fix for scrolling between sidebar/menu, adjusted mobile spacing and min-height

--- a/common-static/css/base.css
+++ b/common-static/css/base.css
@@ -1,3 +1,4 @@
+@import "temp.css";
 /********************************* General ************************************/
 
 body {
@@ -28,7 +29,7 @@ ul {list-style:none; margin:0px; padding:0px}
 .icon-container {display:inline-block; height:16px; line-height:16px; padding: 0px 12px; width: 38px; vertical-align:middle}
 /* Overlay */
 #overlay-back {
-    position   : absolute;
+    position   : fixed;
     top        : 0;
     left       : 0;
     width      : 100%;
